# manojponugoti64.github.io

./: 404.html  CLAUDE.md  SPOTIFY_SETUP.md  about.html  archive.html  articles.html  books.html  comments.js  feed.xml  index.html  music.html  now-playing.json  now.html  photos.css  photos.html  polish.css  reading-time.js  share.js  sidebar.js  space-hub.js  spotify.js  style.css  theme.js  upvote.js  views.js
.claude/: settings.json
.github/scripts/: spotify-now-playing.js
.github/workflows/: ci.yml  spotify-now-playing.yml
blender-mcp/: README.md  addon.py  pyproject.toml  server.py
books/: manifest.json
gallery/: manifest.json
hospital/: app.js  index.html  style.css
iss-tracker/: index.html
manage/: index.html
music/: manifest.json
posts/: between-roots-and-waves-living-real.html  coronary-angiography-tig-catheter-engagement.html  everything-preserved-is-already-gone.html  first-post.html  sam-altman-how-to-build-the-future-jack-altman.html  sam-altman-how-to-build-the-future.html  the-optimal-rate-of-failure.html  the-solid-state-of-life.html  tunnel-vision-a-slow-hello-from-the-bright-side.html  why-i-started-blogging.html  working-hard-is-an-anthem.html
scripts/: check_links.py
thoughts/: comments.js  index.html  index.json  moiaxihk-bdup9.html
write/: index.html
