[project]
name = "blender-mcp-local"
version = "1.0.0"
description = "Self-contained Blender MCP server: drive Blender from an MCP client."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
blender-mcp-local = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# server.py is a single top-level module (not a package).
include = ["server.py"]
